@@ -1,0 +1,8 @@
+Title: Fixed permission bug in "Edit user profile" dialog.
+Level: 1
+Component: wato
+Version: 1.2.4b8
+Date: 1390823084
+Class: fix
+
+The Edit user profile dialog has shown even the not user editable custom fields.
