@@ -5,6 +5,7 @@
 
     WATO:
     * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
+    * 0129 FIX: Fixed permission bug in "Edit user profile" dialog....
 
 
 1.2.4b7:
